--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -42,6 +42,7 @@
 @import "directives/link-button";
 @import "directives/providers-carousel";
 @import "directives/slick-item";
+@import "directives/sidebar-header-current-user";
 @import "resource/details-table";
 @import "resource/collection-table";
 @import "categories/index";
