--- a/app/styles/menu/menu.scss
+++ b/app/styles/menu/menu.scss
@@ -3,13 +3,10 @@
     text-transform: uppercase;
     text-decoration: none;
   }
-  .menu-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 
-  }
   .list{
+    font-family: Montserrat-Regular;
+
     ion-item{
       text-transform: uppercase;
       cursor: pointer;
