Revert "Merge pull request #204 from noggalito/feature/#860-cantidad-maxima"
This reverts commit bccdc676a6e2c216f5df835b507db2782aa1b51e, reversing
changes made to 4c972d41997252c922fd97997ffc97722c309c63.

--- a/app/templates/product/show.jade
+++ b/app/templates/product/show.jade
@@ -18,10 +18,7 @@ ion-view(
 
   ion-footer-bar.bar-stable.item-show-footer.bar-footer--tall
     .left-panel
-      button.button.button-small.button-outline.button-energized.button-letter-stretched(
-        ng-disabled="!productVm.item.cantidad || !productVm.canAdd"
-        ng-click="productVm.runAction(productVm.actions.buyNow)"
-      )
+      button.button.button-small.button-outline.button-energized.button-letter-stretched(ng-disabled="!productVm.item.cantidad" ng-click="productVm.runAction(productVm.actions.buyNow)")
         | {{::("product.buyNow"|translate)}}
     .center-panel
       product-counter(options="productVm.options")
