--- a/app/templates/profile/info/edit.jade
+++ b/app/templates/profile/info/edit.jade
@@ -20,11 +20,11 @@ ion-modal-view
           span.input-label {{::("user.image"|translate)}}
         .row.image-preview
           .img-wrapper
-            img( ng-if="piVm.hasImageFile(piVm.userEdit)" 
+            img( ng-if="piVm.hasImageFile(piVm.userEdit)"
                   ngf-src="piVm.userEdit.custom_image"
                   style="max-width: 70px; max-height: 70px;border-radius: 50%;"
             )
-            user-image( user="piVm.userEdit" ng-if="!piVm.hasImageFile(piVm.userEdit)" 
+            user-image( user="piVm.userEdit" ng-if="!piVm.hasImageFile(piVm.userEdit)"
                   style="max-width: 70px; max-height: 70px;border-radius: 50%;"
             )
         .uploader(
@@ -87,6 +87,34 @@ ion-modal-view
             ng-model="piVm.userEdit.ciudad"
           )
         show-error(array-messages="piVm.messages.ciudad")
+
+        span(ng-if="::piVm.canChangePassword")
+          label.item.item-input.item-stacked-label(
+            ng-class="{'item-error': piVm.messages.password}"
+          )
+            span.input-label {{::("user.password"|translate)}}
+            input(
+              type="password"
+              ng-model="piVm.userEdit.password"
+              placeholder="{{::('form.leaveBlank'|translate)}}"
+            )
+          show-error(array-messages="piVm.messages.password")
+
+        span(ng-if="::piVm.canChangePassword")
+          label.item.item-input.item-stacked-label(
+            ng-class="{'item-error': piVm.updateProfileForm.passwordMatch.$invalid && piVm.updateProfileForm.passwordMatch.$touched}"
+          )
+            span.input-label {{::("user.repeatPassword"|translate)}}
+            input(
+              type="password"
+              match="piVm.userEdit.password"
+              ng-model="piVm.userEdit.passwordMatch"
+              name="passwordMatch"
+              placeholder="{{::('form.leaveBlank'|translate)}}"
+            )
+          .errors-wrapper
+            span.show-errors.ng-active(ng-messages="piVm.updateProfileForm.passwordMatch.$error")
+              span.message-error(ng-message="match") {{::("form.dontMatch"|translate)}}
 
     ion-footer-bar.bar.bar-footer.bar-stable
         button.button.button-outline.button-energized.button-small(
