falta acomodar el icono y etiqueta abierto

--- a/app/templates/directives/provider-profile-schedule/provider-profile-schedule.jade
+++ b/app/templates/directives/provider-profile-schedule/provider-profile-schedule.jade
@@ -4,9 +4,13 @@ span.office-schedule(
   | {{ ::ppSVm.openingTime | toDate:'timeSchedule' | formatDate:'HH:mm' }}
   | -
   | {{ ::ppSVm.closingTime | toDate:'timeSchedule' | formatDate:'HH:mm' }}
+span.i.icon.ion-android-radio-button-on
+  | {{ ::ppSVm.openStatus }}
 span(
   ng-if="ppSVm.fromDay"
 ) {{ ::ppSVm.fromDay }}-
 span(
   ng-if="ppSVm.toDay"
 ) {{ ::ppSVm.toDay }}
+
+
