provider offices belong to places

--- a/app/templates/places/index.jade
+++ b/app/templates/places/index.jade
@@ -8,7 +8,7 @@ ion-view(
       .item.item-divider {{ ::("places.places" | translate) }}
 
       ion-item.place-item.item-icon-left.item-icon-right(
-        ng-repeat="place in ::placesVm.places.places track by $index"
+        ng-repeat="place in ::placesVm.places track by $index"
         ng-click="placesVm.selectPlace(place.id)"
       )
         .icon
