--- a/app/templates/offices/new-edit.jade
+++ b/app/templates/offices/new-edit.jade
@@ -19,15 +19,14 @@ ion-modal-view
         legend(ng-if="officesVm.office.id")
           | {{::("globals.edit"|translate)}} {{::("office.office"|translate)}}
 
-        label.item.item-input.item-stacked-label
-          span.input-label {{::("office.ciudad"|translate)}}
-          input(
-            type="text"
-            ng-class="input-error"
-            ng-model="officesVm.office.ciudad"
+        label.item.item-input.item-select
+          span.input-label {{ ::("office.place"|translate) }}
+          select(
+            ng-model='officesVm.office.place_id'
+            ng-options="place.id as place.full_str for place in officesVm.places"
           )
         .errors-wrapper
-          show-error(array-messages="officesVm.messages.ciudad")
+          show-error(array-messages="officesVm.messages.place_id")
 
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': officesVm.form.direccion.$touched && officesVm.form.direccion.$invalid}"
