--- a/app/templates/providers/orders/index.jade
+++ b/app/templates/providers/orders/index.jade
@@ -4,6 +4,9 @@ ion-view(
   ion-nav-title
     .alt-logo
 
+  ion-nav-buttons(side="right")
+    provider-notifications
+
   ion-content.order-show-page
     .list.list-inset.page-title
       h2 {{::("globals.notifications"|translate)}}
