--- a/app/templates/client/clients.jade
+++ b/app/templates/client/clients.jade
@@ -3,6 +3,10 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
+
+  ion-nav-buttons(side="right")
+    provider-notifications
+
   ion-content.clients-index-page.resource-collection
     .row
       label.item.search-input
@@ -29,7 +33,7 @@ ion-view(
               ng-options="option.name for option in clientsVm.listOptions"
             )
               option(value="") Ordenar por
-    
+
       .col.without-items(ng-if="clientsVm.clients.length === 0")
         p {{::("client.noClients"|translate)}}
 
