--- a/app/templates/offices/offices.jade
+++ b/app/templates/offices/offices.jade
@@ -3,6 +3,10 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
+
+  ion-nav-buttons(side="right")
+    provider-notifications
+
   ion-content.offices-index-page.resource-collection
     .list.list-inset.list--no-borders.text-center
       button.button.button-outline.button-energized(
