contador en carrito

--- a/app/templates/product/show.jade
+++ b/app/templates/product/show.jade
@@ -24,4 +24,4 @@ ion-view(
       )
         | {{::("product.buyNow"|translate)}}
     .center-panel
-      product-counter(options="productVm.options")
+      product-counter(options="productVm.counterOptions")
