show multiple currencies

--- a/app/styles/directives/product-counter.scss
+++ b/app/styles/directives/product-counter.scss
@@ -3,7 +3,7 @@
   font-family: Montserrat-Light;
   font-size: 32px;
   line-height: 34px;
-  justify-content: flex-end;
+  justify-content: center;
 
   .actions-panel {
     display: flex;
@@ -25,7 +25,9 @@
 
   .price-panel {
     display: flex;
+    width: 100%;
     padding-right: 15px;
     align-items: center;
+    justify-content: flex-end;
   }
 }
