--- a/app/templates/item/new-edit.jade
+++ b/app/templates/item/new-edit.jade
@@ -72,14 +72,24 @@ ion-modal-view.item-form
           span.input-label
             | {{::("item.precio"|translate)}}
             abbr *
-          input(
-            min='0'
-            name='precio'
-            step='any'
-            type='number'
-            ng-model='modalVm.item.precio'
-            required
-          )
+          .price-wrapper
+            .item-select
+              select(
+                ng-model='modalVm.item.precio_currency'
+                name='precio_currency'
+                required
+              )
+                option(value='USD') {{ ::("item.currency.USD" | translate) }}
+                option(value='PEN') {{ ::("item.currency.PEN" | translate) }}
+            .input-wrapper
+              input(
+                min='0'
+                name='precio'
+                step='any'
+                type='number'
+                ng-model='modalVm.item.precio'
+                required
+              )
         .errors-wrapper
           span.show-errors(ng-messages="modalVm.itemForm.precio.$error" ng-if="modalVm.itemForm.precio.$touched")
             span.message-error(ng-message="required")
