--- a/app/templates/provider/show.jade
+++ b/app/templates/provider/show.jade
@@ -41,7 +41,10 @@ ion-view(
           .info-wrapper
             .provider-item--title {{ ::providerItem.titulo }}
             .provider-item--subtitle
-              | {{ ::(providerItem.precio_cents | priceCurrency | currency)}}
+              span
+                | {{ ::("item.currency."+providerItem.precio_currency | translate) }}
+              span
+                | {{ ::(providerItem.precio_cents | priceCurrency | currency:'') }}
 
     .provider-category--no-more-items
       | {{ ::("provider.noMoreItems" | translate)}}
