--- a/app/templates/cart/customer-order.jade
+++ b/app/templates/cart/customer-order.jade
@@ -4,6 +4,7 @@
   .provider-profile--title-wrapper
     .provider-profile--subtitle
       span
+        | {{ ::("item.currency."+cartVm.cart.subtotal_items_currency | translate )}}
         order-items-total(
           order-items="providerProfile.customer_order_items"
         )
