--- a/app/templates/customer/orders/order-item-row.jade
+++ b/app/templates/customer/orders/order-item-row.jade
@@ -1,7 +1,11 @@
 .item.row
   .col.col-50 {{ ::item.provider_item.titulo}}
   .col.col-25 {{ ::( ("order.providerProfile.item.cantidadPrefix" |translate) + item.cantidad) }}
-  .col.col-25 {{ ::(item.provider_item_precio_cents | priceCurrency | currency) }}
+  .col.col-25
+    span
+      | {{ ::("item.currency."+item.provider_item.precio_currency | translate) }}
+    span
+      | {{ ::(item.provider_item_precio_cents | priceCurrency | currency:'') }}
 .item.row(ng-if="item.observaciones")
   .col.col-100.customer-order-item-observations
     span.strong
