--- a/app/styles/directives/providers-carousel.scss
+++ b/app/styles/directives/providers-carousel.scss
@@ -49,7 +49,7 @@
             .office-status-text {
               display: none;
 
-              &.closed {
+              &.closed--no-hours {
                 display: block;
 
                 .i {
