--- a/app/templates/directives/provider-profile-schedule/provider-profile-schedule.jade
+++ b/app/templates/directives/provider-profile-schedule/provider-profile-schedule.jade
@@ -13,6 +13,7 @@
   | {{ ::("provider.schedule.open" | translate) }}
 .office-status-text.closed(
   ng-if="::!ppSVm.isOpen"
+  ng-class="{'closed--no-hours':!ppSVm.openingTime || !ppSVm.closingTime}"
 )
   i.i.icon.ion-ios-circle-outline
   | {{ ::("provider.schedule.closed" | translate) }}
