--- a/app/styles/tos/show.scss
+++ b/app/styles/tos/show.scss
@@ -1,14 +1,18 @@
 .tos-show-page {
   .tos-contents {
-
     &, p {
       font-size: 16px;
       line-height: 20px;
+      text-align: justify;
     }
 
     ul {
       list-style-type: disc;
       padding-left: 25px;
     }
+  }
+
+  .primary-button {
+    margin-bottom: 30px;
   }
 }
