--- a/app/templates/directives/product-counter/product-counter.jade
+++ b/app/templates/directives/product-counter/product-counter.jade
@@ -16,6 +16,6 @@
   .price-panel
     .price
       span
-        | {{ ::("item.currency."+pcVm.priceCurrency | translate) }}
+        | {{ ::("item.currency."+pcVm.currencyCode | translate) }}
       span
         | {{ pcVm.priceTotalCents | priceCurrency | currency:'' }}
