--- a/app/styles/customer/order.scss
+++ b/app/styles/customer/order.scss
@@ -13,6 +13,10 @@
 
   .item.narrow {
     padding-top: 0;
+
+    .col {
+      padding-top: 0;
+    }
   }
 
   .strong {
@@ -28,6 +32,17 @@
 
     span {
       margin-right: 4px;
+    }
+  }
+
+  .customer-order-delivery {
+    span {
+      margin-right: 4px;
+    }
+
+    .future-delivery-time {
+      white-space: normal;
+      font-family: Montserrat-Regular;
     }
   }
 }
