--- a/app/templates/cart/order-item.jade
+++ b/app/templates/cart/order-item.jade
@@ -1,5 +1,5 @@
 ion-modal-view.cart-edit-item-modal.slim-modal
-  ion-content(scroll="true")
+  ion-content.resource-form(scroll="true")
     .ion-nav-buttons.buttons(side="primary")
       button.button.button-clear.button-positive.button-small(
         ng-click="cartVm.closeModal()"
