--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -30,6 +30,7 @@
 
 @import "intro";
 @import "branding-logos";
+@import "main/main-sidebar";
 @import "login/general";
 @import "login/register";
 @import "applications/form";
